--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <link type="text/css" rel="stylesheet" href="css/tailwind.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="css/custom.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Enviar Email</title>
+    <title>Email Sender</title>
   </head>
   <body>
 
     <div class="container mx-auto mt-20 bg-white">     
         <header id="header" class="bg-pink-800 p-3 font-bold">
-            Enviar Nuevo Mail
+            Send new email
         </header>
 
 
         <form id="enviar-mail" class="py-10 px-5 max-w-lg mx-auto">
             <div class="mb-10">
-                <label for="email">Para:</label>
+                <label for="email">For:</label>
                 <input class="bg-gray-100 border shadow p-3 w-full"  id="email" type="email">
             </div>
             <div class="mb-10">
-                <label for="asunto">Asunto</label>
+                <label for="asunto">Title:</label>
                 <input class="bg-gray-100 border shadow p-3 w-full"  id="asunto" type="text">
             </div>
             <div class="mb-10"> 
-                <label for="mensaje">Mensaje</label>
+                <label for="mensaje">Message:</label>
                 <textarea class="bg-gray-100 border shadow p-3 w-full" id="mensaje"></textarea>
             </div>
 
@@ -43,9 +43,9 @@
             
             <div class="flex justify-between">
                     <button 
-                        id="enviar" class="w-full bg-blue-600 px-2 py-5 text-white items-center cursor-not-allowed opacity-50 mr-5 uppercase font-bold items-center flex justify-center" 
+                        id="enviar" class="w-full bg-blue-600 px-2 py-5 text-white items-center mr-5 uppercase font-bold items-center flex justify-center" 
                         type="submit" 
-                    >Enviar
+                    >Send
                         <i class="material-icons right text-white ml-3">send</i>
                     </button>
 
@@ -53,7 +53,7 @@
                         id="resetBtn" 
                         class="w-full bg-green-600 px-2 py-5 text-white items-center uppercase font-bold items-center flex justify-center" 
                         type="submit"
-                    >Resetear Form
+                    >Reset form
                             <i class="material-icons right ml-3">delete</i>
                     </button>
             </div>
